<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cl1"
    android:background="@color/white"
    android:layout_marginTop="20dp"
    >

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/username"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:startIconDrawable="@drawable/baseline_person_24"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUsername"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLength="50"
            android:paddingStart="40dp"
            android:cursorVisible="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
             />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Email1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        app:layout_constraintTop_toBottomOf="@id/Username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:startIconDrawable="@drawable/baseline_email_24"
        android:hint="@string/email"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"

            android:maxLength="50"
            android:paddingStart="40dp"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Email1"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:startIconDrawable="@drawable/baseline_drive_file_rename_outline_24"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapCharacters"
            android:maxLength="50"
            android:paddingStart="40dp"
            android:hint="@string/name" />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnExistingAcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/existing_acc"
        android:textColor="@color/purple_700"
        app:layout_constraintTop_toBottomOf="@id/Name"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        app:layout_constraintEnd_toEndOf="@id/Name"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        app:cornerRadius="0dp"
        app:strokeWidth="0dp"
        app:backgroundTint="@android:color/transparent"
        app:elevation="0dp"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="@color/white"
        android:backgroundTint="@color/purple_700"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        app:layout_constraintStart_toStartOf="@id/Name"
        app:layout_constraintEnd_toEndOf="@id/Name"
        app:layout_constraintTop_toBottomOf="@id/btnExistingAcc"
        app:cornerRadius="20dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>